# offdict

./: .gitignore  .gitmodules  Cargo.toml  README.md  config.json5  offdict-userscript.js  start.sh  trie
.github/workflows/: rust.yml
fuzzy_trie/: .gitignore  Cargo.toml
fuzzy_trie/src/: branch.rs  collector.rs  config.rs  inserter.rs  lib.rs  tests.rs
levelshtein_automata/src/: lib.rs
levenshtein_automata/: Cargo.toml
levenshtein_automata/src/: parametric_dfa.rs
offdict-tauri/: README.md  package.json  vite.config.ts.timestamp-1668279103622.mjs
offdict-tauri/clipboard-master/: Cargo.toml  README.md
offdict-tauri/clipboard-master/src/: lib.rs
offdict-tauri/clipboard-master/src/master/: mac.rs  win32.rs  x11.rs
offdict-tauri/src/: App.svelte  main.ts
offdict-tauri/src-tauri/: Cargo.toml  config.json5  tauri.conf.json
offdict-tauri/src-tauri/src/: main.rs
offdict-tauri/src/lib/: Def.svelte  DefUnit.svelte  DefsOfType.svelte
offdict-tauri/x11-clipboard/src/: lib.rs
offdict-ui/: Cargo.toml
offdict-ui/src/: main.rs
offdictd/: .gitignore  Cargo.toml  config.json5
offdictd/benches/: indxer.rs
offdictd/examples/: bench.rs  oldix.rs  rename.rs
offdictd/fixtures/: dict.yaml
offdictd/src/: config.rs  def.rs  def_bin.rs  fst_index.rs  lib.rs  main.rs  suggest.rs  tests.rs  topk.rs
src/: branch.rs  collector.rs  inserter.rs  lib.rs  main.rs  tests.rs
