[package]
name = "offdict"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.4.0"
clap = { version = "4.0.18", features = ["derive"] }
flexbuffers = "2.0.0"
fuzzy_trie = { path = "./fuzzy_trie" }
rocksdb = "0.19.0"

serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"
yaml-rust = "0.4.5"
