[package]
name = "offdictd"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.0.18", features = ["derive"] }
config = "0.13.2"
lazy_static = "1.4.0"
percent-encoding = "2.2.0"
regex = "1.7.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_ignored = "0.1.5"
serde_yaml = "0.9.14"
tokio = { version = "1.21.2", features = ["full"] }
warp = "0.3.3"
yaml-rust = "0.4.5"
timed = "0.1.5"
bincode = "1.3.3"
serde_with = { version = "2.1.0", features = ["base64"] }
debug_print = "1.0.0"
lazy-regex = "2.3.1"
glob = "0.3.0"
memmap2 = { version = "0.9.3", features = ["stable_deref_trait"] }
rocksdb = "0.21"
bitmask-enum = "2.1.0"
anyhow = "1.0.76"
strprox = { path = "../strprox", features = ["serde"] }
derive-new = "0.6.0"
fst = { version = "0.4.7", features = ["levenshtein"], optional = true }
rand = "0.8.5"
yoke = "0.7.3"
[features]
fst = ["dep:fst"]
default = ["fst"]
