[package]
name = "offdict-tauri"
version = "0.2.0"
description = "Offline dictionary"
authors = ["planetor"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = ["api-all", "clipboard", "global-shortcut"] }
offdictd = { path = "../../offdictd/" }
config = "0.13.2"
clipboard-master = { path = "../clipboard-master"}
tauri-plugin-positioner = "1.0.4"
timed = "0.1.5"
gtk = "0.15.5"
gdkx11 = "0.15.5"
lazy-regex = "2.3.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
